--- a/css/layouts.css
+++ b/css/layouts.css
@@ -1,17 +1,35 @@
-body {
-    width: 1200px;
-}
-
 img {
     width: 200px;
 }
 
+h2,
 p {
     width: 200px;
+    font-family: 'Special Elite', cursive;
+    text-align: center
+}
+
+main {
+    display: flex;
+    flex-flow: row wrap;
+    flex-direction: row;
+    height: 100%;
 }
 
 section {
-    float: left;
-    height: 260px;
+    margin: 10px;
+    padding: 4px;
     border: 1px solid black;
+}
+
+#pageselector {
+    font-family: 'Special Elite', cursive;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+h1 {
+    font-family: 'Special Elite', cursive;
+    display: flex;
+    justify-content: space-evenly;
 }
